[project]
name = "thread"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.3.2",
    "langchain>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic-settings>=2.11.0",
    "unstructured[md]>=0.18.15",
]